--- a/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
@@ -1,5 +1,5 @@
 
-<button mat-button [matMenuTriggerFor]="menu">Click for examples</button>
+<button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Click for examples</button>
 <mat-menu #menu="matMenu">
     <span *ngFor="let d of obsSer.sortKeys;let i=index">
   <button mat-menu-item (click)="loadExample(d)">{{i+1}}){{d}}</button>
@@ -19,7 +19,7 @@
     <br />
     Number of operators {{obs.numberOperators}}
   
-    <button value="Add!" (click)="obs.IncrementOperators()">AddOperator</button>
+    <button mat-raised-button color="primary" value="Add!" (click)="obs.IncrementOperators()">AddOperator</button>
     <br />
   
     <div *ngFor="let op of obs.whatOperator;let i=index">
@@ -38,13 +38,13 @@
       <input [(ngModel)]="op.valueToApply" *ngIf="op.functionsFromOperator(op.operatorToApply).length>0" />
       The RXJS is <b><a target="_blank" href="https://rxjs.dev/api/operators/{{op.operatorToApply}}">{{op.operatorToApply}}</a></b>
       <!-- add http://introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipLastTakeLast -->
-      <button (click)="obs.DeleteOperator(i)" *ngIf="obs.numberOperators>1">Delete</button>
+      <button mat-raised-button color="warn" (click)="obs.DeleteOperator(i)" *ngIf="obs.numberOperators>1">Delete</button>
   
     </div>
   
     <br />
   
-    <button (click)="start()">Start</button>
+    <button mat-raised-button color="primary" (click)="start()">Start</button>
   
     <app-rx-visualizer [rxName]="original" [data]="obs.dataFor" [dataPiped]="obs.dataForOneOperator"></app-rx-visualizer>
   
