feat: implemented link

--- a/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
@@ -36,7 +36,7 @@
     <br />
     API URL: {{urlAPI}}
     <br />
-    Current API : <a target="_blank" [routerLink]="['/dashboard','example','oneobserver',exampleSource, exampleID]">/dashboard/example/oneobserver/{{exampleSource}}/{{exampleID}}</a>
+    Current API : <a target="_blank" [routerLink]="['/dashboard','example','oneobserver',obs.source, exampleID]">/dashboard/example/oneobserver/{{obs.source}}/{{exampleID}}</a>
     <br />
     
     Number of operators {{obs.numberOperators}}
