--- a/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
@@ -1,78 +1,169 @@
+<mat-accordion class="example-headers-align" multi>
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title> Examples </mat-panel-title>
+      <mat-panel-description> Numbers, TextBox </mat-panel-description>
+    </mat-expansion-panel-header>
+    <button mat-raised-button color="primary" [matMenuTriggerFor]="menu">
+      Click for examples with numbers
+    </button>
 
-<button mat-raised-button color="primary" [matMenuTriggerFor]="menu">Click for examples with numbers</button>
-<mat-menu #menu="matMenu">
-    <span *ngFor="let d of obsSer.sortKeysNumber;let i=index">
-  <button mat-menu-item (click)="loadExampleNumbers(d)">{{i+1}}){{d}}</button>
-    </span>
-</mat-menu>
+    <mat-menu #menu="matMenu">
+      <span *ngFor="let d of obsSer.sortKeysNumber; let i = index">
+        <button mat-menu-item (click)="loadExampleNumbers(d)">
+          {{ i + 1 }}){{ d }}
+        </button>
+      </span>
+    </mat-menu>
+    &nbsp;&nbsp;&nbsp;&nbsp;
 
+    <button mat-raised-button color="primary" [matMenuTriggerFor]="menuText">
+      Click for examples with textbox
+    </button>
+    <mat-menu #menuText="matMenu">
+      <span *ngFor="let d of obsSer.sortKeysTextBox; let i = index">
+        <button mat-menu-item (click)="loadExampleTextBox(d)">
+          {{ i + 1 }}){{ d }}
+        </button>
+      </span>
+    </mat-menu>
+  </mat-expansion-panel>
 
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title> Define </mat-panel-title>
+      <mat-panel-description> custom observables / pipes</mat-panel-description>
+    </mat-expansion-panel-header>
+    <mat-horizontal-stepper>
+      <mat-step label="Define Source">
+        <select [(ngModel)]="obs.source">
+          <option *ngFor="let name of sourceDatas" [value]="name">
+            {{ name }}
+          </option>
+        </select>
+        <br />
 
+        <input
+          id="search-box"
+          [hidden]="!(obs.source == 'fromTextBox')"
+          placeholder="put some text here"
+        />
 
-<button mat-raised-button color="primary" [matMenuTriggerFor]="menuText">Click for examples with textbox</button>
-<mat-menu #menuText="matMenu">
-    <span *ngFor="let d of obsSer.sortKeysTextBox;let i=index">
-  <button mat-menu-item (click)="loadExampleTextBox(d)">{{i+1}}){{d}}</button>
-    </span>
-</mat-menu>
-  
-  <br />
-  
+        <div [hidden]="!(obs.source == 'netCoreGetNumbers')">
+          From a list of observable (numbers) from
+          <input [(ngModel)]="obs.startNumbers.fromNumber" /> count
+          <input [(ngModel)]="obs.startNumbers.count" /> repeat
+          <input [(ngModel)]="obs.startNumbers.repeat" /> delay
+          <input [(ngModel)]="obs.startNumbers.delaySec" />
+        </div>
+      </mat-step>
 
-  <select [(ngModel)]="obs.source">
-    <option *ngFor="let name of sourceDatas" [value]="name"> {{ name }} </option>
-  </select>
+      <mat-step label="Pipes/Functions">
+        Number of operators {{ obs.numberOperators }}
 
-  <br />
+        <button
+          mat-raised-button
+          color="primary"
+          value="Add!"
+          (click)="obs.IncrementOperators()"
+        >
+          AddOperator
+        </button>
+        <br />
 
-    <input id='search-box' [hidden]="!(obs.source == 'fromTextBox')" />
-    <div [hidden]="!(obs.source == 'netCoreGetNumbers')" >
-    From a list of observable (numbers) from
-    <input [(ngModel)]="obs.startNumbers.fromNumber" /> count
-    <input [(ngModel)]="obs.startNumbers.count" /> repeat
-    <input [(ngModel)]="obs.startNumbers.repeat" /> delay
-    <input [(ngModel)]="obs.startNumbers.delaySec" />
-    </div>
-    <br />
-    API URL: {{urlAPI}}
-    <br />
-    Current API : <a target="_blank" [routerLink]="['/dashboard','example','oneobserver',obs.source, exampleID]">/dashboard/example/oneobserver/{{obs.source}}/{{exampleID}}</a>
-    <br />
-    
-    Number of operators {{obs.numberOperators}}
-  
-    <button mat-raised-button color="primary" value="Add!" (click)="obs.IncrementOperators()">AddOperator</button>
-    <br />
-  
-    <div *ngFor="let op of obs.whatOperator;let i=index">
-      Operator {{i+1}}
-  
-      <select [(ngModel)]="op.operatorToApply">
-        <option *ngFor="let name of operators" [value]="name"> {{ name }} </option>
-      </select>
-  
-      <select [(ngModel)]="op.functionToApply" *ngIf="op.functionsFromOperator(op.operatorToApply).length>0">
-  
-        <option *ngFor="let name of op.functionsFromOperator(op.operatorToApply)" [value]="name"> {{ name }} </option>
-  
-      </select>
-  
-      <input [(ngModel)]="op.valueToApply" *ngIf="op.functionsFromOperator(op.operatorToApply).length>0" />
-      The RXJS is <b><a target="_blank" href="https://rxjs.dev/api/operators/{{op.operatorToApply}}">Documentation {{op.operatorToApply}}</a></b>
-      or 
-      <b><a target="_blank"  href="https://indepth.dev/reference/rxjs/operators/{{op.operatorToApply}}">Resource {{op.operatorToApply}}</a></b>
+        <div *ngFor="let op of obs.whatOperator; let i = index">
+          Operator {{ i + 1 }}
 
-      <!-- add http://introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipLastTakeLast -->
-      <button mat-raised-button color="warn" (click)="obs.DeleteOperator(i)" *ngIf="obs.numberOperators>1">Delete</button>
+          <select [(ngModel)]="op.operatorToApply">
+            <option *ngFor="let name of operators" [value]="name">
+              {{ name }}
+            </option>
+          </select>
+
+          <select
+            [(ngModel)]="op.functionToApply"
+            *ngIf="op.functionsFromOperator(op.operatorToApply).length > 0"
+          >
+            <option
+              *ngFor="let name of op.functionsFromOperator(op.operatorToApply)"
+              [value]="name"
+            >
+              {{ name }}
+            </option>
+          </select>
+
+          <input
+            [(ngModel)]="op.valueToApply"
+            *ngIf="op.functionsFromOperator(op.operatorToApply).length > 0"
+          />
+          The RXJS is
+          <b
+            ><a
+              target="_blank"
+              href="https://rxjs.dev/api/operators/{{ op.operatorToApply }}"
+              >Documentation {{ op.operatorToApply }}</a
+            ></b
+          >
+          or
+          <b
+            ><a
+              target="_blank"
+              href="https://indepth.dev/reference/rxjs/operators/{{
+                op.operatorToApply
+              }}"
+              >Resource {{ op.operatorToApply }}</a
+            ></b
+          >
+
+          <!-- add http://introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipLastTakeLast -->
+          <button
+            mat-raised-button
+            color="warn"
+            (click)="obs.DeleteOperator(i)"
+            *ngIf="obs.numberOperators > 1"
+          >
+            Delete
+          </button>
+        </div>
+      </mat-step>
+
+      <mat-step label="Start">
+        API URL: {{ urlAPI }}
+        <br />
+
+        <button mat-raised-button color="primary" (click)="start()">
+          Start
+        </button>
+        <br />
+
+        Current API :
+        <a
+          target="_blank"
+          [routerLink]="[
+            '/dashboard',
+            'example',
+            'oneobserver',
+            obs.source,
+            exampleID
+          ]"
+          >/dashboard/example/oneobserver/{{ obs.source }}/{{ exampleID }}</a
+        >
+      </mat-step>
+    </mat-horizontal-stepper>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel [expanded]="showVisualization">
+    <mat-expansion-panel-header>
+      <mat-panel-title> Visualization </mat-panel-title>
+      <mat-panel-description> show original and piped</mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <app-rx-visualizer
+    [rxName]="original"
+    [data]="obs.dataFor"
+    [dataPiped]="obs.dataForOneOperator"
+  ></app-rx-visualizer>
   
-    </div>
-  
-    <br />
-  
-    <button mat-raised-button color="primary" (click)="start()">Start</button>
-  
-    <app-rx-visualizer [rxName]="original" [data]="obs.dataFor" [dataPiped]="obs.dataForOneOperator"></app-rx-visualizer>
-  
-    
-  
-  
+</mat-expansion-panel>
+</mat-accordion>
+
