--- a/src/RxJSDemo/RxjsAng/src/app/app.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/app.component.html
@@ -6,9 +6,8 @@
       <mat-toolbar>Menu</mat-toolbar>
       <mat-nav-list>
         
-        <a mat-list-item routerLink="/dashboard/oneobserver">One Observer</a>
-        <a mat-list-item href="#">Link 2</a>
-        <a mat-list-item href="#">Link 3</a>
+        <a mat-list-item routerLink="/dashboard/oneobserver">One Observable</a>
+        <a mat-list-item routerLink="/dashboard/multipleObservers">Combiner Observable</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
