feat: start combine 2 observables

--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -1,6 +1,12 @@
-<p>combine-observer works!</p>
+<h1>First Observable</h1>
 
 
-<app-one-observable></app-one-observable>
+<app-one-observable #firstObs></app-one-observable>
 
-<app-one-observable></app-one-observable>
+<h1>Second Observable</h1>
+
+<app-one-observable #secondObs></app-one-observable>
+
+<h1>Operator </h1>
+
+
