--- a/src/RxJSDemo/RxjsAng/src/app/dashboard/dashboard.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
 <a routerLink="/dashboard/oneobserver">One Observable</a>
  &nbsp;&nbsp;&nbsp;
-<a routerLink="/dashboard/multipleObservers">Combiner Observable</a>
+<a routerLink="/dashboard/multipleObservers">Combine 2 Observable</a>
