feat: start modification visualizer to support 3

--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -10,3 +10,14 @@
 <h1>Operator </h1>
 
 
+
+
+<app-rx-visualizer
+[rxName]="'FirstObservable'"
+[rxName2]="'SecondObservable'"
+[data]="dataFor"
+[dataPiped]="dataForOneOperator"
+></app-rx-visualizer>
+
+
+
