feat: show gannt correctly

--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -15,8 +15,11 @@
 <app-rx-visualizer
 [rxName]="'FirstObservable'"
 [rxName2]="'SecondObservable'"
-[data]="dataFor"
-[dataPiped]="dataForOneOperator"
+[numberObservables]="3"
+[rxName3]="combineName"
+[data]="data1"
+[data2]="data2"
+[data3]="data3"
 ></app-rx-visualizer>
 
 
