--- a/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/one-observable/one-observable.component.html
@@ -183,7 +183,7 @@
     [rxName]="'original'"
     [rxName2]="'piped'"
     [data]="obs.dataFor"
-    [dataPiped]="obs.dataForOneOperator"
+    [data2]="obs.dataForOneOperator"
   ></app-rx-visualizer>
   
 </mat-expansion-panel>
