feat: combine and merge

--- a/src/RxJSDemo/RxjsAng/src/app/app.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/app.component.html
@@ -7,7 +7,7 @@
       <mat-nav-list>
         
         <a mat-list-item routerLink="/dashboard/oneobserver">One Observable</a>
-        <a mat-list-item routerLink="/dashboard/multipleObservers">Combine 2 Observable</a>
+        <a mat-list-item routerLink="/dashboard/twoObservers">Combine 2 Observable</a>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
