--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -9,8 +9,9 @@
 
 <h1>Operator </h1>
 
-
-
+<button mat-raised-button color="primary" (click)="mergeOperation()" >Merge</button>
+&nbsp;
+<button mat-raised-button color="primary" (click)="combineLatestOperation()" >combineLatest</button>
 
 <app-rx-visualizer
 [rxName]="'FirstObservable'"
