--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -12,6 +12,8 @@
 <button mat-raised-button color="primary" (click)="mergeOperation()" >Merge</button>
 &nbsp;
 <button mat-raised-button color="primary" (click)="combineLatestOperation()" >combineLatest</button>
+&nbsp;
+<button mat-raised-button color="primary" (click)="raceOperation()" >race</button>
 
 <app-rx-visualizer
 [rxName]="'FirstObservable'"
