feat: fork and zip

--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -9,11 +9,15 @@
 
 <h1>Operator </h1>
 
-<button mat-raised-button color="primary" (click)="mergeOperation()" >Merge</button>
+<button mat-raised-button color="primary" (click)="mergeOperation()" >merge</button>
 &nbsp;
 <button mat-raised-button color="primary" (click)="combineLatestOperation()" >combineLatest</button>
 &nbsp;
 <button mat-raised-button color="primary" (click)="raceOperation()" >race</button>
+&nbsp;
+<button mat-raised-button color="primary" (click)="forkJoinOperation()" >forkJoin</button>
+&nbsp;
+<button mat-raised-button color="primary" (click)="zipOperation()" >zip</button>
 
 <app-rx-visualizer
 [rxName]="'FirstObservable'"
