--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -19,6 +19,7 @@
 &nbsp;
 <button mat-raised-button color="primary" (click)="zipOperation()" >zip</button>
 
+<h1><a href="{{urlApi}}" target="_blank">{{urlApi}}</a></h1>
 <app-rx-visualizer
 [rxName]="'FirstObservable'"
 [rxName2]="'SecondObservable'"
