--- a/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/combine-observer/combine-observer.component.html
@@ -19,7 +19,9 @@
 &nbsp;
 <button mat-raised-button color="primary" (click)="zipOperation()" >zip</button>
 
-<h1><a href="{{urlApi}}" target="_blank">{{urlApi}}</a></h1>
+<a href="{{urlApi1}}" target="_blank">{{urlApi1}}</a>
+&nbsp;
+<a href="{{urlApi2}}" target="_blank">{{urlApi2}}</a>
 <app-rx-visualizer
 [rxName]="'FirstObservable'"
 [rxName2]="'SecondObservable'"
