--- a/src/RxJSDemo/RxjsAng/src/app/app.component.html
+++ b/src/RxJSDemo/RxjsAng/src/app/app.component.html
@@ -25,6 +25,14 @@
       <!-- Add Content Here -->
       
       <router-outlet></router-outlet>
+      <footer><small>
+      
+        <a *ngIf="ams?.isInCI"  target="_blank" href="{{ams?.sourceCommit}}">Repo: {{ams?.repoUrl}}</a><br /> 
+        Made by {{ams?.authors}} on {{ams?.TheDate}} <br /> 
+        Automation : <a href="/swagger">Swagger</a> | <a href="/BlocklyAutomation">BlocklyAutomation</a>
+  
+      </small></footer>
+    
     </mat-sidenav-content>
   
   </mat-sidenav-container>
